--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,3 @@
-
 html {
   font-size: 16px;
   font-family: "Roboto", sans-serif;
@@ -101,6 +100,7 @@ img {
   top: 1.25rem;
   right: 1.25rem;
   border-radius: 0.3125rem;
+}
 
 
 /************* Fonctionnement ****************/
@@ -214,37 +214,36 @@ section.process {
 .footer{
   color: white;
   background-color: #353535;
-      &__nav{
-          margin: rem-calc(10) 0;
+  &__nav{
+      margin: rem-calc(10) 0;
+      @media screen and (min-width: 1300px) {
+          display: flex;
+          justify-content: center;
+      }
+      li{
+          margin-bottom: rem-calc(3);
           @media screen and (min-width: 1300px) {
+              margin: 0 rem-calc(40);
               display: flex;
-              justify-content: center;
           }
-          li{
-              margin-bottom: rem-calc(3);
-              @media screen and (min-width: 1300px) {
-                  margin: 0 rem-calc(40);
-                  display: flex;
+          // &:nth-child(1)::before{
+          //     content: '\f2e7';
+          //     font-family: 'FontAwesome';
+          //     margin-right: rem-calc(10);
+          //     font-size: clamp(1.3rem, 2vw, 1.7rem); 
+          // }
+          &:nth-child(2)::before{
+              content: '\f4c4';
+              font-family: 'FontAwesome';
+              margin-right: rem-calc(10);
+              font-size: clamp(1.3rem, 2vw, 1.7rem);
+          }
+          a{
+              transition: color 0.4s ease-in-out;
+              &:hover, &:focus{
+                  /*color: $light-primary-color;*/
               }
-                  &:nth-child(1)::before{
-                      content: '\f2e7';
-                      font-family: 'FontAwesome';
-                      margin-right: rem-calc(10);
-                      font-size: clamp(1.3rem, 2vw, 1.7rem);
-                  }
-                  &:nth-child(2)::before{
-                      content: '\f4c4';
-                      font-family: 'FontAwesome';
-                      margin-right: rem-calc(10);
-                      font-size: clamp(1.3rem, 2vw, 1.7rem);
-                  }
-                  a{
-                      transition: color 0.4s ease-in-out;
-                      &:hover, &:focus{
-                          color: $light-primary-color;
-                          }
-                  }
           }
-    }
+        }
+      }
   } 
-}
